--- a/styles/style.css
+++ b/styles/style.css
@@ -36,3 +36,133 @@ ul,
 ol {
   list-style: none;
 }
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: row;
+  width: 1140px;
+  height: 534px;
+  gap: 30px;
+  position: absolute;
+}
+
+.search-form {
+  display: flex;
+  align-items: flex-start;
+  justify-content:space-between;
+  position: relative;
+  
+}
+
+.content__list {
+  height: 70%;
+  overflow-y: scroll;
+  align-self: flex-end;
+  position: relative;
+}
+
+.content__details {
+  width: 100%;
+  height: 100%;
+  
+}
+
+.title {
+  padding-bottom: 26px;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 100%;
+  padding-bottom: 16px;
+  
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+}
+
+
+.content__list-item:not(:last-child ) {
+  padding-bottom: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  align-content: start;
+}
+
+.content__video-card-thumbnail {
+  width: 50%;
+  height: 50%;
+}
+
+.content__video-card-description-container {
+  width: 50%;
+  height: 50%;
+}
+
+.search-form__fieldset-title {
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.title {
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%; /* 70.5px */
+  text-transform: uppercase;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #FFF;
+}
+
+.content__video-card-title {
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 30px */
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  color: #FFF;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16.2px; /* 90% */
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
