--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,10 @@ html {
 
 .page {
   inline-size: 1200px;
-  block-size: 100%;
+  block-size: 800px;
+  padding: 133px 30px;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -40,19 +43,16 @@ ol {
 .content {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  flex-direction: row;
   width: 1140px;
   height: 534px;
   gap: 30px;
-  position: absolute;
+  
 }
 
 .search-form {
-  display: flex;
-  align-items: flex-start;
-  justify-content:space-between;
-  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  
   
 }
 
@@ -63,10 +63,15 @@ ol {
   position: relative;
 }
 
+.content__list::-webkit-scrollbar {
+  display: none;
+}
+
+
+
 .content__details {
   width: 100%;
-  height: 100%;
-  
+  height: 93%;
 }
 
 .title {
@@ -77,7 +82,6 @@ ol {
   width: 711px;
   height: 100%;
   padding-bottom: 16px;
-  
 }
 
 .result__video {
@@ -110,7 +114,7 @@ ol {
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: normal;
+  line-height: normal;  
 }
 
 .title {
@@ -166,3 +170,122 @@ ol {
   clip-path: inset(50%);
   white-space: nowrap;
 }
+
+
+.search-form__fieldset {
+  border: none;
+  width: fit-content;
+}
+
+.search-form__label {
+  display: inline;
+}
+
+.button {
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  background: transparent;
+  border-right: none;
+  border-left: none;
+  border-top: 1px solid #FFF;
+  border-bottom: 1px solid #FFF;
+  display: flex;
+  width: 225px;
+  height: 27px;
+  align-items: center;
+  gap: 10px;
+  color: rgba(255, 255, 255, 0.70);
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  appearance: none;
+}
+
+.search-form__checkbox-list {
+  display: inline;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  vertical-align: middle;
+  border: 1px solid #FFF;
+}
+
+.search-form__label-text {
+  padding-right: 15px;
+  padding-top: 5px;
+}
+
+.search-form__submit-button  {
+  color: #FFF;
+  text-align: center;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border: 1px solid #FFF; 
+  background: transparent;
+}
+
+.more-button {
+  color: #FFF;
+  text-align: center;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  display: flex;
+  width: 399px;
+  height: 34px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border: 1px solid #FFF;
+  background: transparent;
+  padding: 24px;
+ }
+
+ .search-form__label :focus {
+  outline:  1px solid white;
+  outline-offset: 1px;
+ }
+
+ .search-form__label:has(:focus-visible) {
+  /* без единого понятия как сделать :С */
+ }
+
+
+
+.search-form__checkbox[type='checkbox']:checked + .search-form__pseudo-checkbox {
+  background: transparent;
+  outline: 8px solid rgb(255, 255, 255);
+  outline-offset: -10px;
+  } /* чекед квадрат */
+
+
+  .search-form__checkbox-list :hover ~ .search-form__label-text   {
+    text-decoration: underline;
+  } /* наводка на утро день ночь*/
+
+  .button:active {
+   border: 1px solid #FFF;
+   background: #545050;
+  }
+
+  .button:hover {
+    text-decoration: underline;
+  }
+
+  .button:focus-visible {
+    outline: 1px solid #FFF;
+    outline-offset: -3px;
+  }
