--- a/styles/style.css
+++ b/styles/style.css
@@ -4,17 +4,16 @@
   box-sizing: border-box;
 }
 
-html {
+html, body {
   block-size: 100%;
 }
 
 .page {
   inline-size: 1200px;
-  block-size: 800px;
-  padding: 170px 30px;
   justify-content: center;
   align-items: center;
   margin: auto;
+  display: flex;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -52,26 +51,29 @@ ol {
 .search-form {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  
-  
+  margin-top: 24px;  
+}
+
+.result {
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
 }
 
 .content__list {
-  height: 70%;
   overflow-y: scroll;
   align-self: flex-end;
   position: relative;
+  max-height: 296px;
 }
 
 .content__list::-webkit-scrollbar {
   display: none;
 }
 
-
-
 .content__details {
   width: 100%;
-  height: 93%;
+  max-height: 100%;
 }
 
 .title {
@@ -80,22 +82,24 @@ ol {
 
 .result__video-container {
   width: 711px;
-  height: 100%;
-  padding-bottom: 16px;
+  height: 386px;
   position: relative;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
 }
 
 .result__video {
   width: 100%;
-  height: 100%;
 }
 
 
 .content__list-item:not(:last-child ) {
   padding-bottom: 30px;
-  position: relative;
-  z-index: -1;
 }
+
+
 
 .content__video-card {
   display: flex;
@@ -142,7 +146,42 @@ ol {
 
 .content__card-link {
   text-decoration: none;
+  display: block;
   color: #FFF;
+}
+
+.content__card-link:focus-visible {
+  margin: 2px;
+}
+
+
+.content__card-link_current {
+  background: #545050;
+}
+
+.content__video-card:hover {
+  cursor: pointer;
+  color: #FFF;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16.2px; /* 90% */
+  text-decoration-line: underline;
+}
+
+.content__video-card:active {
+  background: #545050;
+}
+
+
+.content__video-card:focus {
+  border: none;
+  outline: none;
+}
+
+.content__video-card:focus-visible {
+  border: 1px solid #FFF;
 }
 
 .content__video-card-title {
@@ -181,7 +220,8 @@ ol {
 }
 
 .search-form__label {
-  display: inline;
+  display: inline-block;
+  margin-right: 10px;
 }
 
 .button {
@@ -190,8 +230,8 @@ ol {
 
 .search-form__textfield {
   background: transparent;
-  border-right: none;
-  border-left: none;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
   border-top: 1px solid #FFF;
   border-bottom: 1px solid #FFF;
   display: flex;
@@ -206,7 +246,18 @@ ol {
   font-weight: 400;
   line-height: normal;
   appearance: none;
+  box-sizing: border-box;
 }
+
+.search-form__textfield:active {
+  border-right: 1px solid #FFF;
+  border-left: 1px solid #FFF;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
 
 .search-form__checkbox-list {
   display: inline;
@@ -218,10 +269,10 @@ ol {
   height: 19px;
   vertical-align: middle;
   border: 1px solid #FFF;
+  position: relative;
 }
 
 .search-form__label-text {
-  padding-right: 15px;
   padding-top: 5px;
 }
 
@@ -233,8 +284,16 @@ ol {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  border: 1px solid #FFF; 
+  display: flex;
+  width: 100%;
+  height: 34px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border: 1px solid #FFF;
   background: transparent;
+  padding: 24px;
 }
 
 .more-button {
@@ -246,7 +305,7 @@ ol {
   font-weight: 700;
   line-height: normal;
   display: flex;
-  width: 399px;
+  width: 100%;
   height: 34px;
   justify-content: center;
   align-items: center;
@@ -257,16 +316,24 @@ ol {
   padding: 24px;
  }
 
- .search-form__label :focus {
+ .search-form__label:has(:focus-visible) {
   outline:  1px solid white;
   outline-offset: 1px;
  }
 
+ .search-form__checkbox:focus-visible {
+  outline: none;
+ }
 
-.search-form__checkbox[type='checkbox']:checked + .search-form__pseudo-checkbox {
-  background: transparent;
-  outline: 8px solid rgb(255, 255, 255);
-  outline-offset: -10px;
+
+.search-form__checkbox[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
+  background: white;
+  position: absolute;
+  top: 1px;
+  bottom: 1px;
+  left: 1px;
+  right: 1px;
+  content: " ";
   } /* чекед квадрат */
 
 
@@ -285,5 +352,7 @@ ol {
 
   .button:focus-visible {
     outline: 1px solid #FFF;
-    outline-offset: -3px;
+    outline-offset: 1px;
   }
+
+
