--- a/styles/style.css
+++ b/styles/style.css
@@ -82,16 +82,17 @@ ol {
 
 .result__video-container {
   width: 711px;
-  height: 386px;
+  /*height: 386px;*/
   position: relative;
-  overflow-y: hidden;
   display: flex;
   justify-content: end;
   flex-direction: column;
 }
 
 .result__video {
-  width: 100%;
+  object-fit: fill;
+  object-position: 100%;
+  
 }
 
 
@@ -213,6 +214,15 @@ ol {
   white-space: nowrap;
 }
 
+.search-form :not(.search-form__submit-button):nth-last-of-type(1) {
+  justify-content: right;
+  justify-self: right;
+}
+
+.search-form__submit-button {
+  
+}
+
 
 .search-form__fieldset {
   border: none;
@@ -240,7 +250,7 @@ ol {
   height: 27px;
   align-items: center;
   gap: 10px;
-  color: rgba(255, 255, 255, 0.70);
+  color: white;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-style: normal;
